--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeff's Website</title>
+    <title>Adam's three.js website
+    
+    </title>
   </head>
   <body>
 
@@ -12,7 +14,7 @@
 
     <main>
 
-      <!-- <header>
+      <header>
         <h1>Adam Smith</h1>
         <p>🚀 Trying out three.js🚀 </p>
       </header>
@@ -101,4 +103,4 @@
 
 
   </body>
-</html>
+</html> -->
